--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </table>
             </div>
         </div>
-    <a href="view.html">
+    <a href="v.html">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNRfEiyQbuUhI56wBenkn7v8SM0Tnq9kln1g&s" alt="Thumbnail Image" class="thumbnail">
     </a>
     </div>
