--- a/v.html
+++ b/v.html
@@ -190,6 +190,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #006400;
         }
         #media-container {
             display: flex;
