--- a/v.html
+++ b/v.html
@@ -216,7 +216,7 @@
         }
         .timestamp {
             font-size: 14px;
-            color: #555;
+            color: blue;
             margin-top: 5px;
         }
         .button-container {
@@ -229,7 +229,7 @@
             padding: 10px 15px;
             border: none;
             border-radius: 5px;
-            background-color: #007bff;
+            background-color: #006400;
             color: white;
             cursor: pointer;
             flex: 1;
