--- a/v.html
+++ b/v.html
@@ -190,7 +190,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #006400;
+            background-color: #EAC117;
         }
         #media-container {
             display: flex;
