--- a/v.html
+++ b/v.html
@@ -201,7 +201,7 @@
             width: 100%;
             max-width: 600px;
             margin: 10px;
-            border: 1px solid #ccc;
+            border: 0px;
             padding: 10px;
             border-radius: 5px;
             display: flex;
@@ -290,7 +290,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: white;
+            background-color: none;
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 5px;
