--- a/v.html
+++ b/v.html
@@ -310,6 +310,10 @@
     </style>
 </head>
 <body>
+    <header>
+        <h1>Highlights Page</h1>
+        <h2>View our latest upload at the top. You can like, share, and comment. Please comment responsibly and avoid inciting conflict.</h2>
+    </header>
 
     <div id="share-popup">
         <h3>Share this media</h3>
