--- a/v.html
+++ b/v.html
@@ -342,6 +342,7 @@
 
     <div class="welcome-message">
         <p>View our latest upload at the top. You can like, share, and comment. Please comment responsibly and avoid inciting conflict.</p>
+    </div>
 
     <div id="share-popup">
         <h3>Share this media</h3>
