--- a/v.html
+++ b/v.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -192,7 +193,7 @@
             font-family: Arial, sans-serif;
             background-color: #FFE4E1;
         }
-            .header {
+        .header {
             background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
             text-align: center;
@@ -215,8 +216,8 @@
             margin-top: 80px; /* Adjust this if the header height changes */
             text-align: center;
             font-family: 'Comic Sans MS', cursive, sans-serif;
-            font-size: 28px;
-            color: #555;
+            font-size: 18px;
+            color: blue;
         }
         #media-container {
             display: flex;
@@ -337,7 +338,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="header-title">Media Page</h1>
+        <h1 class="header-title">Our Media Page</h1>
     </div>
 
     <div class="welcome-message">
