--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 Countdown to Match: <span id="countdown"></span>
             </div>
             <div class="address">
-                KWAMBA TECHNICAL COLLEGE SOCCER FIELD
+                 G.S.S. SULEJA FOOTBALL  FIELD
             </div>
         </div>
     </header>
